[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/Slim.png" type="Texture" id=1]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=2]
[ext_resource path="res://Hitbox and Hurtbox/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Slim.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Climb",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 16.0

[sub_resource type="CapsuleShape2D" id=8]

[sub_resource type="CircleShape2D" id=14]
radius = 48.0937

[node name="Slim" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 2.5 )
scale = Vector2( 0.914, 0.528 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 8 )
frames = SubResource( 6 )
animation = "Climb"
frame = 1
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.504, 0.31 )
shape = SubResource( 7 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, -3.155 )
scale = Vector2( 0.761, 0.247 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.576471 )
position = Vector2( 0, -3 )
shape = SubResource( 14 )

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="PlayerDetectionZone"]
